force-app/main/default/objects/redwing__Training_Plan__c/redwing__Training_Plan__c.object-meta.xml
<CustomObject>
    <label>Learning Plan</label>
    <nameField>
        <label>Learning Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Learning Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>