force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__About_RTA__c.field-meta.xml
<CustomField>
    <fullName>redwing__About_RTA__c</fullName>
    <inlineHelpText>Information displayed in the about section of a Learning Plan</inlineHelpText>
    <label>About</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>