force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Background_Image_URL_For_Tile__c.field-meta.xml
<CustomField>
    <fullName>redwing__Background_Image_URL_For_Tile__c</fullName>
    <inlineHelpText>URL for the image displayed in the Learning List Tile</inlineHelpText>
    <label>Background Image URL For Tile</label>
    <length>255</length>
    <type>Text</type>
</CustomField>