force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Custom_Notification_Message__c.field-meta.xml
<CustomField>
    <fullName>redwing__Custom_Notification_Message__c</fullName>
    <inlineHelpText>Custom message used for chatter notifications</inlineHelpText>
    <label>Custom Notification Message</label>
    <type>TextArea</type>
</CustomField>