force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Default_Language_Learning_Plan__c.field-meta.xml
<CustomField>
    <fullName>redwing__Default_Language_Learning_Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Default Language Learning Plan</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>redwing__Training_Plan__c.Id</field>
            <operation>notEqual</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <filterItems>
            <field>redwing__Training_Plan__c.redwing__Default_Language_Learning_Plan__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>redwing__Training_Plan__c.redwing__Total_Section_Items__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>redwing__Training_Plan__c</referenceTo>
    <relationshipLabel>Learning Plans</relationshipLabel>
    <relationshipName>Training_Plans</relationshipName>
    <type>Lookup</type>
</CustomField>