force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Do_Not_Reset_Progress_For_New_Versions__c.field-meta.xml
<CustomField>
    <fullName>redwing__Do_Not_Reset_Progress_For_New_Versions__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to prevent resetting progress for new versions of learning objects</inlineHelpText>
    <label>Do Not Reset Progress For New Versions</label>
    <type>Checkbox</type>
</CustomField>