force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Duration_hours__c.field-meta.xml
<CustomField>
    <fullName>redwing__Duration_hours__c</fullName>
    <formula>if(!ISBLANK(redwing__Duration__c),
IF(redwing__Duration__c &gt; 59,
TEXT(FLOOR((redwing__Duration__c)/60))&amp;&quot; hr &quot;&amp;TEXT(FLOOR(MOD((redwing__Duration__c)/60,1)*60))&amp;&quot; min&quot;
,TEXT(FLOOR(redwing__Duration__c))&amp;&quot; min&quot;
)
,&quot;&quot;)</formula>
    <label>Duration (hours)</label>
    <type>Text</type>
</CustomField>