force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Enable_Assignment_Management_for_Users__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Assignment_Management_for_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to enable users with the &quot;Manage External Assignments&quot; custom permission to assign external users to this Learning Plan</inlineHelpText>
    <label>Enable Assignment Management for Users</label>
    <type>Checkbox</type>
</CustomField>