force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Enable_Self_Registration__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enable_Self_Registration__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box if you&apos;d like to make this Learning Plan available to all your company and allow users to create assignments on-the-fly.</description>
    <inlineHelpText>Check this box if you&apos;d like to make this Learning Plan available to all your company and allow users to create assignments on-the-fly.</inlineHelpText>
    <label>Enable Self-Registration (Obsolete)</label>
    <type>Checkbox</type>
</CustomField>