force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__End_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>