force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Enforce_Sequence__c.field-meta.xml
<CustomField>
    <fullName>redwing__Enforce_Sequence__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Enable this option to require users to complete the learning activities in the specified order</inlineHelpText>
    <label>Enforce Sequence</label>
    <type>Checkbox</type>
</CustomField>