force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Hide_After_End_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_After_End_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Hide this Learning Plan for end-users if the current date is outside of the Start/End Date range</inlineHelpText>
    <label>Hide After End Date</label>
    <type>Checkbox</type>
</CustomField>