force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Hide_Chatter_Photos__c.field-meta.xml
<CustomField>
    <fullName>redwing__Hide_Chatter_Photos__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to hide chatter photos for the last users that have acquired the Learning Plan achievement</inlineHelpText>
    <label>Hide Chatter Photos</label>
    <type>Checkbox</type>
</CustomField>