force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__ILT_Register_to_Advance__c.field-meta.xml
<CustomField>
    <fullName>redwing__ILT_Register_to_Advance__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If enabled, users must register for an ILT Class to move to the next sequence in the Learning Plan. If disabled, users must complete the ILT to move to the next sequence in the Learning Plan.</inlineHelpText>
    <label>ILT Register to Advance</label>
    <type>Checkbox</type>
</CustomField>