force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Intro_Video_URL__c.field-meta.xml
<CustomField>
    <fullName>redwing__Intro_Video_URL__c</fullName>
    <inlineHelpText>URL for the embedded intro video shown in the Learning Plan detail page</inlineHelpText>
    <label>Intro Video URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>