force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Lock_Completed_Assignments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Lock_Completed_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, users who have completed the Learning Plan will not be moved back to In Progress, regardless of new content or versioning.</inlineHelpText>
    <label>Lock Completed Assignments</label>
    <type>Checkbox</type>
</CustomField>