force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Max_Registrations__c.field-meta.xml
<CustomField>
    <fullName>redwing__Max_Registrations__c</fullName>
    <inlineHelpText>Maximum number of allowed registrations</inlineHelpText>
    <label>Max Registrations</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>