force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Min_Items_For_Completion__c.field-meta.xml
<CustomField>
    <fullName>redwing__Min_Items_For_Completion__c</fullName>
    <inlineHelpText>Define a minimum # of learning items to complete in order to complete the Learning Plan</inlineHelpText>
    <label>Min Items for Completion</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>