force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__New_Until__c.field-meta.xml
<CustomField>
    <fullName>redwing__New_Until__c</fullName>
    <inlineHelpText>Display a New ribbon in the Learning Plan until the specified date</inlineHelpText>
    <label>New Until</label>
    <type>Date</type>
</CustomField>