force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Optional_Feedback_Comments__c.field-meta.xml
<CustomField>
    <fullName>redwing__Optional_Feedback_Comments__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to make feedback comments not required</inlineHelpText>
    <label>Optional Feedback Comments</label>
    <type>Checkbox</type>
</CustomField>