force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Payment_Required__c.field-meta.xml
<CustomField>
    <fullName>redwing__Payment_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Enable this option to require payment in order to register to this Learning Plan</inlineHelpText>
    <label>Payment Required</label>
    <type>Checkbox</type>
</CustomField>