force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Requires_Approval_To_Register__c.field-meta.xml
<CustomField>
    <fullName>redwing__Requires_Approval_To_Register__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, learning administrators will need to approve users&apos; registration requests.</inlineHelpText>
    <label>Requires Approval to Register</label>
    <type>Checkbox</type>
</CustomField>