force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Self_Registration_Access__c.field-meta.xml
<CustomField>
    <fullName>redwing__Self_Registration_Access__c</fullName>
    <inlineHelpText>&quot;Internal&quot; allows users to create assignments &quot;on the fly&quot;. &quot;Requires Approval&quot; logs an approval request that is later handled by the Learning Plan owner.&quot;External&quot; exposes this Learning Plan to all users.</inlineHelpText>
    <label>Self-Registration Access (Obsolete)</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>redwing__Enable_Self_Registration__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Public</fullName>
                <default>true</default>
                <label>Public</label>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Requires Approval</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>