force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>redwing__Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>