force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Status__c.field-meta.xml
<CustomField>
    <fullName>redwing__Status__c</fullName>
    <inlineHelpText>Only Active Learning Plans will be visible to learners, Draft plans will be visible for Learning Admins</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Archived</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>