force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Total_Ratings_Count__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Ratings_Count__c</fullName>
    <label>Total Ratings Count</label>
    <summaryForeignKey>redwing__Training_Plan_Feedback__c.redwing__Training_Plan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>