force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Total_Ratings_Sum__c.field-meta.xml
<CustomField>
    <fullName>redwing__Total_Ratings_Sum__c</fullName>
    <label>Total Ratings Sum</label>
    <summarizedField>redwing__Training_Plan_Feedback__c.redwing__Rating__c</summarizedField>
    <summaryForeignKey>redwing__Training_Plan_Feedback__c.redwing__Training_Plan__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>