force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Training_Plan_Rating__c.field-meta.xml
<CustomField>
    <fullName>redwing__Training_Plan_Rating__c</fullName>
    <formula>IF( redwing__Total_Ratings_Count__c &gt; 0 , redwing__Total_Ratings_Sum__c/redwing__Total_Ratings_Count__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Learning Plan Rating</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>