force-app/main/default/objects/redwing__Training_Plan__c/fields/redwing__Withdraw_Cutoff__c.field-meta.xml
<CustomField>
    <fullName>redwing__Withdraw_Cutoff__c</fullName>
    <label>Withdraw Cutoff</label>
    <type>Date</type>
</CustomField>