force-app/main/default/objects/redwing__Training_Plan__c/validationRules/redwing__Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>redwing__Start_Date__c &gt;  redwing__End_Date__c</errorConditionFormula>
    <errorMessage>Start Date cannot be greater than End Date</errorMessage>
</ValidationRule>