force-app/main/default/objects/redwing__Training_Plan__c/validationRules/redwing__Empty_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>redwing__Empty_Date_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>(!ISBLANK(redwing__Start_Date__c) &amp;&amp; ISBLANK(redwing__End_Date__c)) || (ISBLANK(redwing__Start_Date__c) &amp;&amp; !ISBLANK(redwing__End_Date__c))</errorConditionFormula>
    <errorMessage>You must set a value for Start and End date or leave both empty</errorMessage>
</ValidationRule>