force-app/main/default/objects/redwing__Training_Plan__c/listViews/redwing__All.listView-meta.xml
<ListView>
    <fullName>redwing__All</fullName>
    <columns>NAME</columns>
    <columns>redwing__Description__c</columns>
    <columns>redwing__Status__c</columns>
    <columns>redwing__Start_Date__c</columns>
    <columns>redwing__End_Date__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>